[workspace]

[package]
name = "uwuwind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2.140", default-features = false, features = ["extra_traits"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
