[workspace]
members = ["test-program"]

[package]
name = "uwuwind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2.140", default-features = false, features = ["extra_traits"] }
tracing = { version = "0.1.40", default-features = false, features = ["attributes"] }

[profile.dev]
# the test binary needs uwutables
panic = "unwind"

[profile.release]
# the test binary needs uwutables
panic = "unwind"
